Fixed burger menu look with CSS, and collapse functionality with js

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -39,3 +39,17 @@ h2, h3 {
     color: black;
 }
 
+.navbar-default .navbar-brand {
+    font-weight: 600;
+}
+
+.navbar-default .navbar-toggle .icon-bar {
+    background: white;
+}
+
+.navbar-default .navbar-toggle {
+    border-color: white;
+    &:hover, &:focus {
+        background-color: #FFD200;
+    }
+}
